# fitnes-tracker

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  BRANCH_PROTECTION_TEST.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  check_quality.sh  docker-compose.prod.yml  install_tools.sh  pyproject.toml  requirements.in  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  security.yml
app/: __init__.py  main.py
app/api/: __init__.py
app/core/: __init__.py
docs/: DEVELOPMENT.md
scripts/: deploy-synology.sh  dev.sh  docker-build.sh  quality.sh  setup.sh  test.sh
tests/: __init__.py  test_errors.py  test_integration.py  test_main.py  test_middleware.py
